--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -5,29 +5,29 @@
     <meta charset="UTF-8">
     <title>Page Title</title>
     <link href="Birthday.css" rel="stylesheet" type="text/css">
-    
-  </head>
-  <header><h1>#1 Song On My Birthday</h1> 
+    <header><h1>#1 Song On My Birthday</h1> 
   </header>
+  </head>
+  
   <body>
     <iframe width="560" height="315"  src="https://www.youtube.com/embed/lYfkl-HXfuU?si=Hsyq9iPLOxJkFNV7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <img src="lopez.jpg" alt="lopez">
     <h5>the longes song</h5>
 <div>
-    <p2> [Chorus]<br>
+    <p> [Chorus]<br>
       If you had my love, and I gave you all my trust<br>
       Would you comfort me?<br>
       And if somehow you knew that your love would be untrue<br>
       Would you lie to me and call me "baby"?<br>
-    </p2>
-    <p2>
+    </p>
+    <p>
       [Verse 1]<br>
       Now, if I give you me, this is how it's got to be<br>
       First of all, I won't take you cheatin' on me<br>
       Tell me, who can I trust if I can't trust in you?<br>
       And I refuse to let you play me for a fool (Yeah, yeah)<br>
-    </p2>
-      <p2>
+    </p>
+      <p>
       [Pre-Chorus]<br>
       You said that we could possibly spend eternity<br>
       (You said that we could possibly spend eternity, yeah, yeah, yeah, yeah)<br>
@@ -35,23 +35,23 @@
       But if you want me, you have to be fulfilling all my dreams<br>
       (You want me, you have to be fulfilling all my dreams, yeah, yeah, yeah, yeah)<br>
       If you really want me, bae<br>
-      </p2>
-      <p2>
+      </p>
+      <p>
       [Chorus]<br>
       If you had my love, and I gave you all my trust<br>
       Would you comfort me?<br>
       Would you comfort me? Tell me, baby
       And if somehow you knew that your love would be untrue, yeah (How you knew)<br>
       Would you lie to me and call me "baby"? (Na, na, na, na, na)<br>
-      </p2>
-      <p2>
+      </p>
+      <p>
       [Verse 2]<br>
       You said you want my love and you've got to have it all<br>
       But first, there are some things you need to know<br>
       If you wanna live with all I have to give<br>
       I need to feel true love or it's got to end, yeah<br>
-      </p2>
-      <p2>
+      </p>
+      <p>
       [Pre-Chorus]<br>
       I don't want you trying to get with me (Don't want you)<br>
       (Don't want you trying to get with me, yeah, yeah, yeah, yeah)<br>
@@ -61,8 +61,8 @@
       (So before I do give myself to you, yeah, yeah, yeah, yeah)<br>
       I have to know the truth<br>
       If I spend my life with you<br>
-      </p2>
-      <p2>
+      </p>
+      <p>
       [Chorus]<br>
       If you had my love, and I gave you all my trust (Had my love, gave you trust)<br>
       Would you comfort me? What would you do, babe? Tell me right now<br>
@@ -72,15 +72,15 @@
       What would you do? Would you comfort me? (Comfort me, ooh, tell me, baby)<br>
       And if somehow you knew that your love would be untrue (How you knew, be untrue)<br>
       Would you lie to me and call me "baby"? (Would you lie to me? Don't you lie to me, baby)<br>
-      </p2>
-      <p2>
+      </p>
+      <p>
       [Bridge]
       Mmm, yeah<br>
       Ooh, na, na, na<br>
       Ooh<br>
       (If you had my)<br>
-      </p2>
-      <p2>
+      </p>
+      <p>
       [Chorus]
       If you had my love, and I gave you all my trust<br>
       Would you comfort me? (Would you comfort me? Tell me, baby, oh)<br>
@@ -90,14 +90,14 @@
       Would you comfort me? (What would you do if I gave it to you?)<br>
       And if somehow you knew that your love would be untrue (Tell me)<br>
       Would you lie to me and call me "baby"? (Don't you lie to me, call me, call me "baby")<br>
-      </p2>
-      <p2>
+      </p>
+      <p>
       [Outro]<br>
       If you had my love, and I gave you all my trust<br>
       Would you comfort me?<br>
       And if somehow you knew that your love would be untrue<br>
       Would you lie to me and call me "baby"?<br> 
-      </p2>
+      </p>
     
   </div>
   </body>
