--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -3,7 +3,7 @@
   <head>
     <div id="wrapper">
     <meta charset="UTF-8">
-    <title>Page Title</title>
+    <title>Birthday</title>
     <link href="Birthday.css" rel="stylesheet" type="text/css">
     <header><h1>#1 Song On My Birthday</h1> 
   </header>
@@ -98,7 +98,7 @@
       And if somehow you knew that your love would be untrue<br>
       Would you lie to me and call me "baby"?<br> 
       </p>
-    
+</div>
   </div>
   </body>
 </html>
