--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <div id="wrapper">
     <meta charset="UTF-8">
     <title>Birthday</title>
-    <link href="Birthday.css" rel="stylesheet" type="text/css">
+    <link href="Birthday.css" rel="stylesheet" type="text/css".>
+       <div id="wrapper">
     <header><h1>#1 Song On My Birthday</h1> 
   </header>
   </head>
