--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <link href= "Birthday.css" rel= "stylesheet" type= "text/css">
        <div id="wrapper">
-    <header><h1>#1 Song On My Birthday</h1> 
+  </head>
+
+      <header> 
+        <h1>#1 Song On My Birthday</h1> 
   </header>
   
   <body>
