--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -97,7 +97,7 @@
       And if somehow you knew that your love would be untrue<br>
       Would you lie to me and call me "baby"?<br> 
       </p>
-    
+</div>
   </div>
   </body>
 </html>
