--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -9,7 +9,7 @@
     <h1>#1 Song On My Birthday</h1> 
   </header>
 
-    <a href="https://www.youtube.com/embed/lYfkl-HXfuU?si=Hsyq9iPLOxJkFNV7"><img src="vevo.jpg" class="vevo" width="320" height="220"></a></a>
+    <a href="https://www.youtube.com/embed/lYfkl-HXfuU?si=Hsyq9iPLOxJkFNV7"><img src="vevo.jpg" alt="vevo" width="320" height="220"></a>
     <img src="lopez.jpg" alt="lopez">
     <h5>the longes song</h5>
 <div>
