--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -12,7 +12,7 @@
 
     
     <img src="lopez.jpg" alt="lopez">
-    <a href="https://www.youtube.com/embed/lYfkl-HXfuU?si=Hsyq9iPLOxJkFNV7"><img src="vevo.jpg" alt="vevo" width="420" height="320"></a>
+    <a href="https://www.youtube.com/embed/lYfkl-HXfuU?si=Hsyq9iPLOxJkFNV7"><img src="vevo.jpg" class="vevo" width="420" height="320"></a>
     <h5>the longes song I've ever listened to and I wish I could get those 5 minutes back... It honestly wasn't that bad of a song but it's not something I would personally listen too. </h5>
 <div>
     <p> [Chorus]<br>
