--- a/Birthday/Birthday.html
+++ b/Birthday/Birthday.html
@@ -13,7 +13,7 @@
     
     <img src="lopez.jpg" alt="lopez">
     <a href="https://www.youtube.com/embed/lYfkl-HXfuU?si=Hsyq9iPLOxJkFNV7"><img src="vevo.jpg" class="vevo" width="520" height="320"></a>
-    <h2>the longes song I've ever listened to and I wish I could get those 5 minutes back... It honestly wasn't that bad of a song but it's not something I would personally listen too. </h2>
+    <p2>the longes song I've ever listened to and I wish I could get those 5 minutes back... It honestly wasn't that bad of a song but it's not something I would personally listen too. </p2>
 <div>
     <p> [Chorus]<br>
       If you had my love, and I gave you all my trust<br>
